added home page

--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
         </nav>
     </header>
 
-    <!-- <div>
+    <div class="h-details">
         <div>
-            <h1 class="uppercase h5 text-accent">So, you want to travel to <br>
-                <span class="h1 text-white">Space</span>
+            <h1 class="title h5">So, you want to travel to <br>
+                <span class="h1">Space</span>
             </h1>
-            <p class="text-accent">Let’s face it; if you want to go to space, you might as well genuinely go to outer
+            <p class="description">Let’s face it; if you want to go to space, you might as well genuinely go to outer
                 space and not hover kind of on the edge of it. Well sit back, and relax because we’ll give you a truly
                 out of this world experience!
             </p>
         </div>
         <div>
-            <a href="#" class="button-large uppercase ff-bellefair">Explore</a>
+            <a href="#" class="button-large">Explore</a>
         </div>
-    </div> -->
+    </div>
 </body>
 
 </html>
