--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <nav class="nav primary-nav">
             <ul class="nav-list" id='nav-list'>
                 <li class="nav-item active"><a class="nav-link" href="/"><span>00</span>Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="/destination"><span>01</span>Destination</a>
+                <li class="nav-item"><a class="nav-link" href="/destination.html"><span>01</span>Destination</a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="/crew"><span>02</span>Crew</a>
+                <li class="nav-item"><a class="nav-link" href="/crew.html"><span>02</span>Crew</a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="/technology"><span>03</span>Technology</a></li>
+                <li class="nav-item"><a class="nav-link" href="/technology.html"><span>03</span>Technology</a></li>
             </ul>
         </nav>
     </header>
