--- a/crew.html
+++ b/crew.html
@@ -54,7 +54,8 @@
     <div class="grid-container grid-container--crew flow">
         <h1 class="numbered-title h5"><span>02</span>Meet your crew</h1>
 
-        <article class="crew-details">
+        <!-- Commander -->
+        <article class="crew-details" data-role="commander">
             <h2 class="designation h4 uppercase">Commander</h2>
             <p class="name h3 uppercase">Douglas Hurley</p>
             <p class="description">Douglas Gerald Hurley is an American engineer, former Marine Corps pilot
@@ -62,16 +63,64 @@
                 commander of Crew Dragon Demo-2.</p>
         </article>
 
-        <div class="dot-indicators flex">
-            <button class="active"></button>
-            <button></button>
-            <button></button>
-            <button></button>
+        <!-- Specialist -->
+        <article hidden class="crew-details" data-role="specialist">
+            <h2 class="designation h4 uppercase">Mission Specialist</h2>
+            <p class="name h3 uppercase">Mark Shuttleworth</p>
+            <p class="description">Mark Richard Shuttleworth is the founder and CEO of Canonical, the company behind
+                the Linux-based Ubuntu operating system. Shuttleworth became the first South
+                African to travel to space as a space tourist.</p>
+        </article>
+
+        <!-- Pilot -->
+        <article hidden class="crew-details" data-role="pilot">
+            <h2 class="designation h4 uppercase">Pilot</h2>
+            <p class="name h3 uppercase">Victor Glover</p>
+            <p class="description">Pilot on the first operational flight of the SpaceX Crew Dragon to the
+                International Space Station. Glover is a commander in the U.S. Navy where
+                he pilots an F/A-18.He was a crew member of Expedition 64, and served as a
+                station systems flight engineer.</p>
+        </article>
+
+        <!-- Flight Engineer -->
+        <article hidden class="crew-details" data-role="engineer">
+            <h2 class="designation h4 uppercase">Flight Engineer</h2>
+            <p class="name h3 uppercase">Anousheh Ansari</p>
+            <p class="description">Anousheh Ansari is an Iranian American engineer and co-founder of Prodea Systems.
+                Ansari was the fourth self-funded space tourist, the first self-funded woman to
+                fly to the ISS, and the first Iranian in space.</p>
+        </article>
+
+        <div class="dot-indicators flex" role="tablist">
+            <button class="active" role="tab" data-relate='commander'></button>
+            <button role="tab" data-relate="specialist"></button>
+            <button role="tab" data-relate="pilot"></button>
+            <button role="tab" data-relate="engineer"></button>
         </div>
 
-        <div class="img-crew-member">
+        <!-- Douglas Hurley -->
+        <picture class="img-crew-member " data-role="commander">
+            <source srcset="./assets/crew/image-douglas-hurley.webp">
             <img src="./assets/crew/image-douglas-hurley.png" alt="Douglas Hurley">
-        </div>
+        </picture>
+
+        <!-- Mark Shuttleworth -->
+        <picture hidden class="img-crew-member" data-role="specialist">
+            <source srcset="./assets/crew/image-mark-shuttleworth.webp">
+            <img src="./assets/crew/image-mark-shuttleworth.png" alt="Mark Shuttleworth">
+        </picture>
+
+        <!-- Victor Glover -->
+        <picture hidden class="img-crew-member" data-role="pilot">
+            <source srcset="./assets/crew/image-victor-glover.webp">
+            <img src="./assets/crew/image-victor-glover.png" alt="Victor Glover">
+        </picture>
+
+        <!-- Anousheh Ansari -->
+        <picture hidden class="img-crew-member" data-role="engineer">
+            <source srcset="./assets/crew/image-anousheh-ansari.webp">
+            <img src="./assets/crew/image-anousheh-ansari.png" alt="Anousheh Ansari">
+        </picture>
     </div>
 
 </body>
