--- a/crew.html
+++ b/crew.html
@@ -13,6 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap"
         rel="stylesheet">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/dist/style.css" />
 
