--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </p>
         </div>
         <div>
-            <a href="#" class="button-large">Explore</a>
+            <a href="/destination.html" class="button-large">Explore</a>
         </div>
     </div>
 </body>
