typo in destination.html

--- a/destination.html
+++ b/destination.html
@@ -129,7 +129,7 @@
                         </div>
                         <div class="planet-data">
                             <h3 class="data-label">Est. travel time</h3>
-                            <p class="data-number">9 months/p>
+                            <p class="data-number">9 months </p>
                         </div>
                     </div>
                 </article>
